
[workspace]
members = [
	# "node",

	"runtime-modules/airdrop",
	"runtime-modules/setbft",
	"runtime-modules/asset-registry",
	"runtime-modules/committee-management",
	"runtime-modules/currencies",
	"runtime-modules/ecdp-loans",
	"runtime-modules/ecdp-seusd-engine",
	"runtime-modules/ecdp-seusd-treasury",
	"runtime-modules/edfis-swap-legacy",
	"runtime-modules/elections",
	"runtime-modules/evm",
	"runtime-modules/evm-bridge",
	"runtime-modules/bridge",
	"runtime-modules/bridge-access-segregator",
	"runtime-modules/bridge-basic-fee-handler",
	"runtime-modules/bridge-fee-handler-router",
	"runtime-modules/bridge-forwarder",
	"runtime-modules/bridge-parachain-info",
	"runtime-modules/bridge-percentage-fee-handler",
	"runtime-modules/bridge-traits",
	"runtime-modules/bridge-xcm",
	"runtime-modules/evm-manager",
	"runtime-modules/evm-utility",
	"runtime-modules/idle-scheduler",
	"runtime-modules/incentives",
	"runtime-modules/operations",
	"runtime-modules/oracle",
	"runtime-modules/parameters",
	"runtime-modules/prices",
	"runtime-modules/rate-limit",
	"runtime-modules/rewards",
	"runtime-modules/support",
	"runtime-modules/tokens",
	"runtime-modules/traits",
	"runtime-modules/transaction-pause",
	"runtime-modules/transaction-payment",
	"runtime-modules/unified-accounts",
	"runtime-modules/utilities",
	"runtime-modules/vesting",

	"runtime-modules/currencies/runtime-api",
	"runtime-modules/oracle/runtime-api",
	"runtime-modules/tokens/runtime-api",
	"runtime-modules/setbft/runtime-api",
	"runtime-modules/evm-utility/macro",
	"primitives",
	# "clisee",
	"setheum-client",
# 	"rate-limiter",
	"finality/aggregator",
	"finality/rate-limiter",
	# "clique",
	# "finality",
	"finality/finality-setbft",
	"finality/fake-runtime-api",
	# "finalizer",

	"runtime",
	"runtime/common",

	"runtime-modules/authority",
	"runtime-modules/gradually-update",
	"runtime-modules/payments",
	"runtime-modules/unknown-tokens",
	"runtime-modules/xcm-support",
	"runtime-modules/xcm",
	"runtime-modules/xtokens",
	"runtime-modules/xcm-mock-message-queue",

]

resolver = "2"

[profile.release]
# Substrate runtime requires unwinding.
panic = 'unwind'

[profile.dev]
split-debuginfo = "unpacked"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[workspace.package]
version = "0.9.81+dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = [ "Afsall Labs", "Afsall Labs", "Setheum Foundation" ]
edition = "2021"
homepage = "https://setheum.com"
repository = "https://github.com/setheum/setheum"

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Substrate. In other words, if you add
# a dependency on Substrate, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Substrate workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-zebra = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }
insta.opt-level = 3
similar.opt-level = 3

[workspace.dependencies]
set-bft-crypto = { path = "../set-bft/crypto" }
set-bft-mock = { path = "../set-bft/mock" }
set-bft-rmc = { path = "../set-bft/rmc" }
set-bft-types = { path = "../set-bft/types" }
async-trait = { version = "0.1.71" }
array-bytes = { version = "6" }
bn = { package = "substrate-bn", version = "0.6", default-features = false }
bytes = { version = "1.5" }
bstringify = { version = "0.1.2" }
clap = { version = "4.0.9" }
coins-bip32 = { version = "0.7.0" }
coins-bip39 = { version = "0.7.0" }
derive_more = { version = "0.99" }
enumflags2 = { version = "0.7.7" }
env_logger = { version = "0.10.0" }
ethabi = { version = "18.0.0", default-features = false }
ethereum-types = { version = "0.14.0", default-features = false }
futures = { version =  "0.3.28" }
futures-timer = { version = "3.0" }
hash-db = { version = "0.16", default-features = false }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.4.1" }
impl-trait-for-tuples = { version = "0.2.3" }
ink = { version = "5.0.0-rc" }
ip_network = { version = "0.4" }
jsonrpc-core = { version = "15.1.0" }
jsonrpc-derive = { version = "15.1.0" }
jsonrpsee = { version = "0.16.3" }
k256 = { version = "0.11.5", default-features = false }
libp2p = { version = "0.51" }
libsecp256k1 = { version = "0.7", default-features = false }
log = { version = "0.4.20", default-features = false }
lru = { version = "0.10" }
num = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
num_enum = { version = "0.5.1", default-features = false }
parity-scale-codec = { version = "3.6.5", default-features = false }
parking_lot = { version = "0.12" }
paste = { version = "1.0" }
proc-macro2 = { version = "1.0.40" }
quote = { version = "1.0.20" }
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.2", default-features = false }
rand_pcg = { version = "0.3.1", default-features = false }
rlp = { version = "0.5.2", default-features = false }
ripemd = { version = "0.1.3", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.145", default-features = false }
serde_json = { version = "1.0.81", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
smallvec = { version = "1.4.1" }
static_assertions = { version = "1.1.0" }
thiserror = { version = "1.0" }
tiny-bip39 = { version = "1.0" }
syn = { version = "1.0.98" }
tiny-keccak = { version = "2.0" }
tokio = { version = "1.36" }

# Dependencies are split into 2 groups: WASM and Client.
# - "WASM" dependencies requires to be no_std compatible, which often requires
#   `default-features = false`. When used in a client-side crate the "std" feature should be enabled
#   there if it exists.
# - "Client" dependencies are only used in the client, and thus don't need to be no_std compatible.

# MODULE (WASM)
module-auction = { package = "module-auction", path = "runtime-modules/auction", default-features = false }
module-asset-registry = { path = "runtime-modules/module-asset-registry", default-features = false }
module-authority = { path = "runtime-modules/authority", default-features = false }
module-benchmarking = { package = "module-benchmarking", path = "runtime-modules/benchmarking", default-features = false }
module-build-script-utils = { path = "module/build-script-utils" }
module-oracle = { package = "module-oracle", path = "runtime-modules/oracle", default-features = false }
module-oracle-runtime-api = { package = "module-oracle-runtime-api", path = "runtime-modules/oracle/runtime-api", default-features = false }
module-parameters = { package = "module-parameters", path = "runtime-modules/parameters", default-features = false }
module-payments = { path = "runtime-modules/payments", default-features = false }
module-rewards = { package = "module-rewards", path = "runtime-modules/rewards", default-features = false }
module-tokens = { package = "module-tokens", path = "runtime-modules/tokens", default-features = false }
module-tokens-runtime-api = { path = "runtime-modules/tokens/runtime-api", default-features = false }
module-traits = { package = "module-traits", path = "runtime-modules/traits", default-features = false }
module-unknown-tokens = { path = "runtime-modules/unknown-tokens", default-features = false }
module-utilities = { package = "module-utilities", path = "runtime-modules/utilities", default-features = false }
module-vesting = { package = "module-vesting", path = "runtime-modules/vesting", default-features = false }
module-xcm = { package = "module-xcm", path = "runtime-modules/xcm", default-features = false }
module-xcm-support = { package = "module-xcm-support", path = "runtime-modules/xcm-support", default-features = false }
module-xtokens = { package = "module-xtokens", path = "runtime-modules/xtokens", default-features = false }

wasm-bencher = { git = "https://github.com/open-web3-stack/wasm-bencher", branch = "polkadot-v1.3.0", default-features = false }

# Setheum (WASM)
primitives = { package = "setheum-primitives", path = "primitives", default-features = false }
runtime-common = { path = "runtime/common", default-features = false }
setheum-runtime = { path = "runtime", default-features = false }

module-evm-utility = { path = "runtime-modules/evm-utility", default-features = false }
module-evm = { path = "runtime-modules/evm", default-features = false }
module-currencies = { path = "runtime-modules/currencies", default-features = false }
module-evm-bridge = { path = "runtime-modules/evm-bridge", default-features = false }
module-bridge = { path = "runtime-modules/bridge", default-features = false }
module-bridge-access-segregator = { path = "runtime-modules/bridge-access-segregator", default-features = false }
module-bridge-basic-fee-handler = { path = "runtime-modules/bridge-basic-fee-handler", default-features = false }
module-bridge-fee-handler-router = { path = "runtime-modules/bridge-fee-handler-router", default-features = false }
module-bridge-parachain-info = { path = "runtime-modules/bridge-parachain-info", default-features = false }
module-bridge-forwarder = { path = "runtime-modules/bridge-forwarder", default-features = false }
module-bridge-percentage-fee-handler = { path = "runtime-modules/bridge-percentage-fee-handler", default-features = false }
module-bridge-traits = { path = "runtime-modules/bridge-traits", default-features = false }
module-bridge-xcm = { path = "runtime-modules/bridge-xcm", default-features = false }
module-support = { path = "runtime-modules/support", default-features = false }
module-transaction-payment = { path = "runtime-modules/transaction-payment", default-features = false }
module-idle-scheduler = { path = "runtime-modules/idle-scheduler", default-features = false }
module-edfis_swap_legacy = { package = "module-edfis-swap-legacy", path = "runtime-modules/edfis-swap-legacy", default-features = false }
module-ecdp-loans = { path = "runtime-modules/ecdp-loans", default-features = false }
module-ecdp-seusd-engine = { path = "runtime-modules/ecdp-seusd-engine", default-features = false }
module-ecdp-seusd-treasury = { path = "runtime-modules/ecdp-seusd-treasury", default-features = false }
module-evm-accounts = { package = "module-unified-accounts", path = "runtime-modules/unified-accounts", default-features = false }
module-evm-manager = { path = "runtime-modules/evm-manager", default-features = false }
module-edfis-legacy = { package = "module-edfis-swap-legacy", path = "runtime-modules/edfis-swap-legacy", default-features = false }
module-unified-accounts = { path = "runtime-modules/unified-accounts", default-features = false }
rate-limiter = { package = "finality-rate-limiter", path = "finality/rate-limiter", default-features = false }
network-clique = { path = "clique" }

# SetBFT specific Local Crates
fake-runtime-api = { path = "finality/fake-runtime-api", default-features = false }
module-setbft-runtime-api = { path = "runtime-modules/setbft/runtime-api", default-features = false }
module-setbft = { path = "runtime-modules/setbft", default-features = false }
module-elections = { path = "runtime-modules/elections", default-features = false }
module-committee-management = { path = "runtime-modules/committee-management", default-features = false }
module-operations = { path = "runtime-modules/operations", default-features = false }
finality-setbft = { path = "finality/finality-setbft" }




# Setheum & MODULE (client)
setheum-node = { path = "node" }
module-evm-utility-macro = { path = "runtime-modules/evm-utility/macro" }

# Substrate Pallets (WASM)
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-nomination-pools = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-nomination-pools-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-recovery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-root-testing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-staking-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-tips = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }

sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-consensus-slots = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-debug-derive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-wasm-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", package = "staging-xcm", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", package = "staging-xcm-builder", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", package = "staging-xcm-executor", default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }

frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }

sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-consensus-slots = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-network-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-network-light = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-network-transactions = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-rpc-server = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-finality-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-consensus-epochs = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sc-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }

substrate-build-script-utils = { version = "9.0.0" }
substrate-frame-rpc-system = { version = "25.0.0" }
substrate-prometheus-endpoint = { version = "0.16.0" }
substrate-wasm-builder = { version = "14.0.0" }

try-runtime-cli = { version = "0.35.0" }

xcm-simulator = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }

halo2_proofs = { git = "https://github.com/Cardinal-Cryptography/pse-halo2", branch = "setbft", default-features = false }

substrate-test-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
substrate-test-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
substrate-test-runtime-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }

polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
parachains-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
