[package]
name = "move-vm-backend-common"
version = "0.1.0"
authors = [ "Eiger <hello@eiger.co>",]
edition = "2021"
repository = "https://github.com/eigerco/substrate-move"
description = "MoveVM backend common"

[features]
default = [ "std", "gas_schedule",]
gas_schedule = []
testing = []
build-move-projects-for-test = []
std = [ "anyhow/std", "move-binary-format/std", "move-core-types/std", "move-stdlib/std", "move-vm-test-utils/std", "move-vm-types/std", "parity-scale-codec/std", "scale-info/std", "serde/std", "serde_bytes/std",]

[dependencies.anyhow]
workspace = true
default-features = false

[dependencies.bcs]
workspace = true
default-features = false

[dependencies.lazy_static]
version = "1.4"
default-features = false
features = [ "spin_no_std",]

[dependencies.move-binary-format]
workspace = true
default-features = false

[dependencies.move-core-types]
workspace = true
features = [ "address32",]
default-features = false

[dependencies.move-stdlib]
workspace = true
features = [ "address32",]
default-features = false

[dependencies.move-vm-test-utils]
workspace = true
default-features = false

[dependencies.move-vm-types]
workspace = true
default-features = false

[dependencies.move-vm-runtime]
workspace = true
default-features = false

[dependencies.parity-scale-codec]
workspace = true
features = [ "derive",]
default-features = false

[dependencies.scale-info]
workspace = true
features = [ "derive",]
default-features = false

[dependencies.serde]
workspace = true
features = [ "derive",]
default-features = false

[dependencies.serde_bytes]
version = "0.11"
default-features = false
features = [ "alloc",]
