[package]
name = "move-vm-backend"
version = "0.1.0"
authors = ["Eiger <hello@eiger.co>"]
edition = "2021"

repository = "https://github.com/eigerco/substrate-move"
description = "MoveVM backend to be used with Substrate pallet"

[dependencies]
anyhow = { version = "1.0", default-features = false }
bcs = { git = "https://github.com/eigerco/bcs.git", default-features = false, branch = "master" }
hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }
move-binary-format = { path = "../language/move-binary-format", default-features = false }
move-core-types = { path = "../language/move-core/types", default-features = false, features = ["address32"] }
move-stdlib = { path = "../language/move-stdlib", default-features = false, features = ["address32", "stdlib-bytecode"] }
move-vm-backend-common = { path = "../move-vm-backend-common", default-features = false, features = ["gas_schedule"] }
move-vm-runtime = { path = "../language/move-vm/runtime", default-features = false }
move-vm-test-utils = { path = "../language/move-vm/test-utils", default-features = false }
move-vm-types = { path = "../language/move-vm/types", default-features = false }
num-integer = { version = "0.1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
move-vm-test-utils = { path = "../language/move-vm/test-utils" }
siphasher = "1"

[features]
default = ["std"]

# Builds move projects for test purposes.
build-move-projects-for-test = []

std = [
    "anyhow/std",
    "move-binary-format/std",
    "move-core-types/std",
    "move-vm-runtime/std",
    "move-vm-types/std",
    "move-vm-backend-common/std",
    "num-integer/std",
]
