[package]
name = "move-vm-backend"
version = "0.1.0"
authors = [ "Eiger <hello@eiger.co>",]
edition = "2021"
repository = "https://github.com/eigerco/substrate-move"
description = "MoveVM backend to be used with Substrate pallet"

[dev-dependencies]
siphasher = "1"

[features]
default = [ "std",]
build-move-projects-for-test = []
std = [ "anyhow/std", "move-binary-format/std", "move-core-types/std", "move-vm-runtime/std", "move-vm-types/std", "move-vm-backend-common/std", "num-integer/std",]

[dependencies.anyhow]
workspace = true
default-features = false

[dependencies.bcs]
workspace = true
default-features = false

[dependencies.hashbrown]
workspace = true
features = [ "ahash",]
default-features = false

[dependencies.move-binary-format]
workspace = true
default-features = false

[dependencies.move-core-types]
workspace = true
features = [ "address32",]
default-features = false

[dependencies.move-stdlib]
workspace = true
features = [ "address32", "stdlib-bytecode",]
default-features = false

[dependencies.move-vm-backend-common]
workspace = true
features = [ "gas_schedule",]
default-features = false

[dependencies.move-vm-runtime]
workspace = true
default-features = false

[dependencies.move-vm-test-utils]
workspace = true
default-features = false

[dependencies.move-vm-types]
workspace = true
default-features = false

[dependencies.num-integer]
version = "0.1"
default-features = false

[dependencies.serde]
workspace = true
features = [ "derive",]
default-features = false

[dev-dependencies.move-vm-test-utils]
workspace = true
