[package]
name = "move-vm-support"
version = "0.1.0"
authors = [ "Eiger <hello@eiger.co>",]
edition = "2021"
repository = "https://github.com/eigerco/substrate-move"
description = "MoveVM support for Substrate"

[dependencies]
bs58 = "0.5"

[dependencies.anyhow]
workspace = true

[dependencies.blake2]
workspace = true

[dependencies.move-core-types]
workspace = true

[dev-dependencies.hex-literal]
workspace = true
