[package]
name = "set-bft"
version = "0.45.4"
edition = "2021"
authors = [ "Afsall Labs",]
categories = [ "algorithms", "data-structures", "cryptography", "database",]
documentation = "https://docs.rs/?"
homepage = "https://setheum.com"
repository = "https://github.com/setheum/set-bft"
keywords = [ "asynchronous", "consensus", "bft", "blockchain", "distributed-systems",]
license = "Apache-2.0 OR MIT"
readme = "../README.md"
description = "SetBFT is an asynchronous and Byzantine fault tolerant consensus protocol aimed at ordering arbitrary messages (transactions). It has been designed to continuously operate even in the harshest conditions: with no bounds on message-delivery delays and in the presence of malicious actors. This makes it an excellent fit for blockchain-related applications."

[dependencies]
derivative = "2.2.0"

[dev-dependencies]
serial_test = "3.2.0"

[features]
default = [ "initial_unit_collection",]
initial_unit_collection = []

[dependencies.set-bft-rmc]
workspace = true

[dependencies.set-bft-types]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.codec]
workspace = true
features = [ "derive",]
default-features = false

[dependencies.futures]
workspace = true

[dependencies.futures-timer]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.log]
workspace = true

[dependencies.parking_lot]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.thiserror]
workspace = true

[dev-dependencies.set-bft-mock]
workspace = true

[dev-dependencies.env_logger]
workspace = true

[dev-dependencies.tokio]
workspace = true
features = [ "macros", "rt", "rt-multi-thread", "time",]
