[package]
name = "set-bft-crypto"
version = "0.11.0"
edition = "2021"
authors = [ "Afsall Labs",]
documentation = "https://docs.rs/?"
homepage = "https://setheum.com"
license = "Apache-2.0 OR MIT"
categories = [ "cryptography",]
repository = "https://github.com/setheum/set-bft"
readme = "./README.md"
description = "Utilities for node addressing and message signing in the set-bft package."

[dependencies]
bit-vec = "0.8"

[dependencies.async-trait]
workspace = true

[dependencies.codec]
workspace = true
features = [ "derive",]
default-features = false

[dependencies.derive_more]
workspace = true
features = [ "full",]

[dependencies.log]
workspace = true

[dev-dependencies.tokio]
workspace = true
features = [ "macros", "rt", "rt-multi-thread",]
