[package]
name = "set-bft-mock"
version = "0.18.0"
edition = "2021"
authors = ["Afsall Labs"]
documentation = "https://docs.rs/?"
homepage = "https://setheum.com"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/setheum/set-bft"
readme = "./README.md"
description = "Mock implementations of traits required by the set-bft package. Do NOT use outside of testing!"

[dependencies]
set-bft-types = { path = "../types", version = "0.16" }
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
futures = "0.3"
log = "0.4"
parking_lot = "0.12"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
