[package]
name = "set-bft-mock"
version = "0.18.0"
edition = "2021"
authors = [ "Afsall Labs",]
documentation = "https://docs.rs/?"
homepage = "https://setheum.com"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/setheum/set-bft"
readme = "./README.md"
description = "Mock implementations of traits required by the set-bft package. Do NOT use outside of testing!"

[dependencies.set-bft-types]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.codec]
workspace = true
features = [ "derive",]
default-features = false

[dependencies.futures]
workspace = true

[dependencies.log]
workspace = true

[dependencies.parking_lot]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "macros", "rt", "rt-multi-thread",]
